[metadata]
name = ppb-vector
version = 0.4.0rc1
author = Piper Thunstrom
author_email = pathunstrom@gmail.com
description = A basic game development Vector2 class.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ppb/ppb-vector
license = Artistic-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering :: Mathematics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = ppb_vector
python_requires = >= 3.6
zip_safe = True

setup_requires = pytest-runner

[aliases]
test = pytest


[flake8]
select = C,E,F,I,W,B,B9
ignore = E704
max-line-length = 100

application-import-names = ppb_vector,utils
import-order-style = smarkets
