[metadata]
name = ppb-vector
version = attr: ppb_vector.__version__
author = Piper Thunstrom
author_email = pathunstrom@gmail.com
description = A basic game development Vector class.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ppb/ppb-vector
license = Artistic-2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Artistic License
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering :: Mathematics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = ppb_vector
python_requires = >= 3.7
zip_safe = True

[aliases]
test = pytest


[flake8]
select = C,E,F,I,N,W,B,B9
ignore = E704
max-line-length = 100

application-import-names = ppb_vector,utils
import-order-style = smarkets
